feat: add coming soon!

--- a/index.html
+++ b/index.html
@@ -82,6 +82,12 @@
 
                 <li class="layer" data-depth="0.30">
                     <div class="hero">
+                        <h1>
+                            Coming soon!
+                        </h1>
+
+                    </div>
+                    <!-- <div class="hero">
                         <h1 id="countdown">
                             
                         </h1>
@@ -89,7 +95,7 @@
                         <p class="sub-title">
                             
                         </p>
-                    </div>
+                    </div> -->
                 </li>
                 <!-- Flakes -->
 
