feat: add logo 😍

--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
 
                 <li class="layer" data-depth="0.25">
                     <div class="sphere">
-                        <img alt="sphere" src="images/sphere.png">
+                        <img alt="sphere" src="images/tomons-logo-inverted.png">
                     </div>
                 </li>
 
