feat: add analytics

--- a/index.html
+++ b/index.html
@@ -39,6 +39,15 @@
             <link rel="stylesheet" type="text/css" href="css/ie.css" />
         <![endif]-->
         <!-- Javascript -->
+        <!-- Global site tag (gtag.js) - Google Analytics -->
+        <script async src="https://www.googletagmanager.com/gtag/js?id=G-TLE34VZQ49"></script>
+        <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag(){dataLayer.push(arguments);}
+        gtag('js', new Date());
+
+        gtag('config', 'G-TLE34VZQ49');
+        </script>
 
         <script src="js/jquery.js"></script>
     </head>
