--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-12">
-                    <a href=""><img src="images/logo-dark.png" alt="" height="26" /></a>
+                    <a href=""><img src="images/logo.png" alt="" height="128" /></a>
 
                     <div class="float-end d-none d-md-inline-block">
                         <a href="#" class="btn btn-primary btn-sm text-uppercase">Go to app</a>
