--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                     <a href=""><img src="images/logo.png" alt="" height="128" /></a>
 
                     <div class="float-end d-none d-md-inline-block">
-                        <a href="#" class="btn btn-primary btn-sm text-uppercase">Go to app</a>
+                        <a href="#" class="btn btn-primary text-uppercase">Go to app</a>
                     </div>
                 </div>
             </div>
@@ -52,7 +52,7 @@
                             <div class="mt-lg-0 mt-4 text-center">
                                 <h1 class="home-title display-4 fw-bold text-uppercase">
                                     No more <br/>
-                                    <a href="" class="typewrite" data-period="300" data-type='[ "losing money", "ugly address", "mistake" ]'>
+                                    <a href="" class="typewrite" data-period="300" data-type='[ "losing money", "ugly address", "copy & paste address" ]'>
                                         <span class="wrap"></span>
                                     </a>
                                 </h1>
@@ -79,7 +79,7 @@
                                     <i class="mdi mdi-earth h4 text-primary flex-shrink-0"></i>
                                     <div class="flex-grow-1 ms-3">
                                         <h5 class="f-18">Your web3 username</h5>
-                                        <p class="text-muted">No more sandboxed usernames. Own your username, store an avatar and other profile data, and use it across services.</p>
+                                        <p class="text-muted">No more sandboxed usernames. Own your username.</p>
                                     </div>
                                 </div>
                             </div>
@@ -90,9 +90,8 @@
                                 <div class="d-flex">
                                     <i class="mdi mdi-wallet h4 text-primary flex-shrink-0"></i>
                                     <div class="flex-grow-1 ms-3">
-                                        <h5 class="f-18">One Name For All of Your Addresses</h5>
-                                        <p class="text-muted">No more copying and pasting long addresses.
-                                            Use your ENS name to store all of your addresses and receive any cryptocurrency, token.</p>
+                                        <h5 class="f-18">One name for all of your addresses</h5>
+                                        <p class="text-muted">Use your Tomo name to store all of your addresses and receive any cryptocurrency.</p>
                                     </div>
                                 </div>
                             </div>
@@ -103,7 +102,7 @@
                                 <div class="d-flex">
                                     <i class="mdi mdi-file-document h4 text-primary flex-shrink-0"></i>
                                     <div class="flex-grow-1 ms-3">
-                                        <h5 class="f-18">Easy to use</h5>
+                                        <h5 class="f-18">Easy to use & memorize</h5>
                                         <p class="text-muted">your_name.tomo</p>
                                     </div>
                                 </div>
