--- a/index.html
+++ b/index.html
@@ -35,9 +35,9 @@
                 <div class="col-lg-12">
                     <a href=""><img src="images/logo.png" alt="" height="128" /></a>
 
-                    <div class="float-end d-none d-md-inline-block">
+                    <!--<div class="float-end d-none d-md-inline-block">
                         <a href="#" class="btn btn-primary text-uppercase">Go to app</a>
-                    </div>
+                    </div>-->
                 </div>
             </div>
         </div>
@@ -59,14 +59,9 @@
 
                                 <p class="text-muted f-18 mt-3 mb-1">Decentralised naming for wallets & more.
                                 </p>
-
-                                <div class="mt-5">
-                                    <div class="search-form">
-                                        <form action="#">
-                                            <input type="text" placeholder="Enter your name" />
-                                            <button type="submit" class="btn btn-primary">Check Availability</button>
-                                        </form>
-                                    </div>
+                                <br />
+                                <div class="d-none d-md-inline-block">
+                                    <a href="#" class="btn btn-primary text-uppercase">Go to app</a>
                                 </div>
                             </div>
                         </div>
