--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="utf-8" />
-    <title>Tomo Name Service</title>
+    <title>TomoChain Name Service</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="Tomo Chain Name Service" />
     <meta name="keywords" content="TomoChain, Tomo, TomoNS, TNS, TomoNameService" />
