fix: show cta in responsive

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
                                 <p class="text-muted f-18 mt-3 mb-1">Decentralised naming for wallets & more.
                                 </p>
                                 <br />
-                                <div class="d-none d-md-inline-block">
+                                <div class="text-center mt-4">
                                     <a href="#" class="btn btn-primary text-uppercase">Go to app</a>
                                 </div>
                             </div>
