--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
 
 <head>
     <meta charset="utf-8" />
-    <title>TomoChain Name Service</title>
+    <title>Viction Name Service</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content="Tomo Chain Name Service" />
-    <meta name="keywords" content="TomoChain, Tomo, TomoNS, TNS, TomoNameService" />
+    <meta name="description" content="Viction Name Service" />
+    <meta name="keywords" content="Viction, Vic, VicNS, VNS, VictionNameService" />
     <!-- favicon -->
     <link rel="shortcut icon" href="images/favicon.png" />
 
@@ -86,7 +86,7 @@
                                     <i class="mdi mdi-wallet h4 text-primary flex-shrink-0"></i>
                                     <div class="flex-grow-1 ms-3">
                                         <h5 class="f-18">One name for all of your addresses</h5>
-                                        <p class="text-muted">Use your Tomo name to store all of your addresses and receive any cryptocurrency.</p>
+                                        <p class="text-muted">Use your Vic name to store all of your addresses and receive any cryptocurrency.</p>
                                     </div>
                                 </div>
                             </div>
@@ -98,7 +98,7 @@
                                     <i class="mdi mdi-file-document h4 text-primary flex-shrink-0"></i>
                                     <div class="flex-grow-1 ms-3">
                                         <h5 class="f-18">Easy to use & memorize</h5>
-                                        <p class="text-muted">your_name.tomo</p>
+                                        <p class="text-muted">your_name.vic</p>
                                     </div>
                                 </div>
                             </div>
@@ -129,7 +129,7 @@
                     </div>
 
                     <div class="float-end pull-none">
-                        <p class="mb-0 mt-4">© <script>document.write(new Date().getFullYear())</script> Tomo Name Service</p>
+                        <p class="mb-0 mt-4">© <script>document.write(new Date().getFullYear())</script> Viction Name Service</p>
                     </div>
                 </div>
             </div>
