--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta name="description" content="Viction Name Service" />
     <meta name="keywords" content="Viction, Vic, VicNS, VNS, VictionNameService" />
     <!-- favicon -->
-    <link rel="shortcut icon" href="images/favicon.png" />
+    <link rel="shortcut icon" href="images/Logo_FA_Viction_Logomark_SmallUse_Black.svg" />
 
     <link rel="stylesheet" type="text/css" href="css/animate.min.css" />
 
