--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
                                 </p>
                                 <br />
                                 <div class="text-center mt-4">
-                                    <a href="#" class="btn btn-primary text-uppercase">Go to app</a>
+                                    <a href="https://app.viction.name" class="btn btn-primary text-uppercase">Go to app</a>
                                 </div>
                             </div>
                         </div>
